--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,12 +6,13 @@
     android:installLocation="preferExternal" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
+        android:minSdkVersion="19"
+        android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
+        android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:icon="@drawable/blue"
         android:label="@string/app_name"
